{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 14,
  "lineage": "a7da9dea-3782-bcc4-e570-09857c90ba8a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666938415731:security-group/sg-08f81f5948542099d",
            "description": "Allow PostgreSQL from EC2 security group only",
            "egress": [],
            "id": "sg-08f81f5948542099d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-015ab48b713f45933"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ftm-db-sg",
            "name_prefix": "",
            "owner_id": "666938415731",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ftm-db-sg",
              "Project": "financial-topic-modeling"
            },
            "tags_all": {
              "Name": "ftm-db-sg",
              "Project": "financial-topic-modeling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5dd3cb620345d14"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666938415731:security-group/sg-015ab48b713f45933",
            "description": "Allow SSH from specified IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015ab48b713f45933",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.158.5.229/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ftm-ec2-sg",
            "name_prefix": "",
            "owner_id": "666938415731",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ftm-ec2-sg",
              "Project": "financial-topic-modeling"
            },
            "tags_all": {
              "Name": "ftm-ec2-sg",
              "Project": "financial-topic-modeling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5dd3cb620345d14"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}